# pve-cluster

src/pmxcfs-rs/: .gitignore  ARCHITECTURE.txt  Cargo.toml  Makefile  README.md
src/pmxcfs-rs/integration-tests/: README.md  run-tests.sh  test  test-local
src/pmxcfs-rs/integration-tests/docker/: .dockerignore  Dockerfile  debian.sources  docker-compose.cluster.yml  docker-compose.mixed.yml  docker-compose.yml  healthcheck.sh  start-cluster-node.sh
src/pmxcfs-rs/integration-tests/docker/lib/: corosync.conf.mixed.template  corosync.conf.template  setup-cluster.sh
src/pmxcfs-rs/integration-tests/tests/: run-c-tests.sh  test-config.sh
src/pmxcfs-rs/integration-tests/tests/cluster/: 01-connectivity.sh  02-file-sync.sh  03-clusterlog-sync.sh  04-binary-format-sync.sh
src/pmxcfs-rs/integration-tests/tests/core/: 01-test-paths.sh  02-plugin-version.sh
src/pmxcfs-rs/integration-tests/tests/dfsm/: 01-sync.sh  02-multi-node.sh
src/pmxcfs-rs/integration-tests/tests/fuse/: 01-operations.sh  02-quorum-permissions.sh  03-write-operations.sh  04-chmod-chown.sh
src/pmxcfs-rs/integration-tests/tests/ipc/: 01-socket-api.sh  02-flow-control.sh  03-log-cluster-msg.sh  04-get-cluster-log.sh  05-get-rrd-dump.sh  06-readonly-ops.sh  07-write-ops.sh  08-guest-config-ops.sh  09-all-ipc-ops.sh  COVERAGE.md  QUICKSTART.md  README.md  SUMMARY.md  TESTING-IMPROVEMENTS.md  test-lib.sh
src/pmxcfs-rs/integration-tests/tests/ipc/perl/: IPCTestLib.pm  README.md  get-cluster-info.pl  get-cluster-log.pl  get-config.pl  get-fs-version.pl  get-guest-config-properties.pl  get-guest-config-property.pl  get-guest-list.pl  get-rrd-dump.pl  get-status.pl  log-cluster-msg.pl  set-status.pl  verify-token.pl
src/pmxcfs-rs/integration-tests/tests/locks/: 01-lock-management.sh
src/pmxcfs-rs/integration-tests/tests/logger/: 01-clusterlog-basic.sh  README.md
src/pmxcfs-rs/integration-tests/tests/memdb/: 01-access.sh
src/pmxcfs-rs/integration-tests/tests/mixed-cluster/: 01-node-types.sh  02-file-sync.sh  03-quorum.sh  04-c-rust-binary-validation.sh  05-merge-correctness.sh  06-stress-test.sh  07-mtime-sync.sh  08-mixed-cluster-rrd-interop.sh
src/pmxcfs-rs/integration-tests/tests/plugins/: 01-plugin-files.sh  02-clusterlog-plugin.sh  03-plugin-write.sh  README.md
src/pmxcfs-rs/integration-tests/tests/rrd/: 01-rrd-basic.sh  02-schema-validation.sh  03-rrdcached-integration.sh  05-column-skip-transform.sh  README-MIXED-CLUSTER-RRD.md  README.md
src/pmxcfs-rs/integration-tests/tests/status/: 01-status-tracking.sh  02-status-operations.sh  03-multinode-sync.sh
src/pmxcfs-rs/pmxcfs/: Cargo.toml  README.md
src/pmxcfs-rs/pmxcfs-api-types/: Cargo.toml  README.md
src/pmxcfs-rs/pmxcfs-api-types/src/: error.rs  lib.rs
src/pmxcfs-rs/pmxcfs-config/: Cargo.toml  README.md
src/pmxcfs-rs/pmxcfs-config/src/: lib.rs
src/pmxcfs-rs/pmxcfs-dfsm/: Cargo.toml  README.md
src/pmxcfs-rs/pmxcfs-dfsm/src/: callbacks.rs  cluster_database_service.rs  cpg_service.rs  dfsm_message.rs  fuse_message.rs  kv_store_message.rs  lib.rs  message.rs  state_machine.rs  status_sync_service.rs  types.rs  wire_format.rs
src/pmxcfs-rs/pmxcfs-dfsm/tests/: multi_node_sync_tests.rs
src/pmxcfs-rs/pmxcfs-ipc/: Cargo.toml  README.md
src/pmxcfs-rs/pmxcfs-ipc/examples/: test_server.rs
src/pmxcfs-rs/pmxcfs-ipc/src/: connection.rs  handler.rs  lib.rs  protocol.rs  ringbuffer.rs  server.rs  socket.rs
src/pmxcfs-rs/pmxcfs-ipc/tests/: auth_test.rs  qb_wire_compat.rs
src/pmxcfs-rs/pmxcfs-logger/: Cargo.toml  README.md
src/pmxcfs-rs/pmxcfs-logger/src/: cluster_log.rs  entry.rs  hash.rs  lib.rs  ring_buffer.rs
src/pmxcfs-rs/pmxcfs-logger/tests/: binary_compatibility_tests.rs  performance_tests.rs
src/pmxcfs-rs/pmxcfs-memdb/: Cargo.toml  README.md
src/pmxcfs-rs/pmxcfs-memdb/src/: database.rs  index.rs  lib.rs  locks.rs  sync.rs  traits.rs  types.rs  vmlist.rs
src/pmxcfs-rs/pmxcfs-memdb/tests/: checksum_test.rs  sync_integration_tests.rs
src/pmxcfs-rs/pmxcfs-rrd/: Cargo.toml  README.md
src/pmxcfs-rs/pmxcfs-rrd/src/: backend.rs  daemon.rs  key_type.rs  lib.rs  parse.rs  schema.rs  writer.rs
src/pmxcfs-rs/pmxcfs-rrd/src/backend/: backend_daemon.rs  backend_direct.rs  backend_fallback.rs
src/pmxcfs-rs/pmxcfs-rrd/src/rrdcached/: LICENSE  client.rs  consolidation_function.rs  create.rs  errors.rs  mod.rs  now.rs  parsers.rs  sanitisation.rs
src/pmxcfs-rs/pmxcfs-services/: Cargo.toml  README.md
src/pmxcfs-rs/pmxcfs-services/src/: error.rs  lib.rs  manager.rs  service.rs
src/pmxcfs-rs/pmxcfs-services/src/manager/: dispatch.rs  mod.rs  retry.rs  state.rs  timer.rs
src/pmxcfs-rs/pmxcfs-services/tests/: service_tests.rs
src/pmxcfs-rs/pmxcfs-status/: Cargo.toml  README.md
src/pmxcfs-rs/pmxcfs-status/src/: lib.rs  status.rs  traits.rs  types.rs
src/pmxcfs-rs/pmxcfs-test-utils/: Cargo.toml
src/pmxcfs-rs/pmxcfs-test-utils/src/: lib.rs  mock_memdb.rs
src/pmxcfs-rs/pmxcfs/src/: cluster_config_service.rs  daemon.rs  file_lock.rs  lib.rs  logging.rs  main.rs  memdb_callbacks.rs  quorum_service.rs  restart_flag.rs  status_callbacks.rs
src/pmxcfs-rs/pmxcfs/src/fuse/: README.md  filesystem.rs  mod.rs
src/pmxcfs-rs/pmxcfs/src/ipc/: mod.rs  request.rs  service.rs
src/pmxcfs-rs/pmxcfs/src/plugins/: README.md  clusterlog.rs  debug.rs  members.rs  mod.rs  registry.rs  rrd.rs  types.rs  version.rs  vmlist.rs
src/pmxcfs-rs/pmxcfs/tests/: fuse_basic_test.rs  fuse_cluster_test.rs  fuse_integration_test.rs  fuse_locks_test.rs  local_integration.rs  quorum_behavior.rs  single_node_functional.rs  symlink_quorum_test.rs
src/pmxcfs-rs/pmxcfs/tests/common/: mod.rs
src/pmxcfs-rs/tests/: fuse_basic_test.rs  fuse_cluster_test.rs  fuse_integration_test.rs  fuse_locks_test.rs  local_integration.rs  quorum_behavior_test.rs  single_node_test.rs  symlink_quorum_test.rs  two_node_test.rs
