# Workspace root for pmxcfs Rust implementation
[workspace]
members = [
    "pmxcfs-api-types",  # Shared types and error definitions
    "pmxcfs-config",     # Configuration management
    "pmxcfs-logger",     # Cluster log with ring buffer and deduplication
]
resolver = "2"

[workspace.package]
version = "9.0.6"
edition = "2024"
authors = ["Proxmox Support Team <support@proxmox.com>"]
license = "AGPL-3.0"
repository = "https://git.proxmox.com/?p=pve-cluster.git"
rust-version = "1.85"

[workspace.dependencies]
# Internal workspace dependencies
pmxcfs-api-types = { path = "pmxcfs-api-types" }
pmxcfs-config = { path = "pmxcfs-config" }
pmxcfs-logger = { path = "pmxcfs-logger" }

# Error handling
thiserror = "1.0"

# Concurrency primitives
parking_lot = "0.12"

# System integration
libc = "0.2"

[workspace.lints.clippy]
uninlined_format_args = "warn"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[profile.dev]
opt-level = 1
debug = true

[patch.crates-io]
