# Workspace root for pmxcfs Rust implementation
[workspace]
members = [
    "pmxcfs-api-types",  # Shared types and error definitions
    "pmxcfs-config",     # Configuration management
    "pmxcfs-logger",     # Cluster log with ring buffer and deduplication
    "pmxcfs-rrd",        # RRD (Round-Robin Database) persistence
    "pmxcfs-memdb",      # In-memory database with SQLite persistence
    "pmxcfs-status",     # Status monitoring and RRD data management
    "pmxcfs-test-utils", # Test utilities and helpers (dev-only)
]
resolver = "2"

[workspace.package]
version = "9.0.6"
edition = "2024"
authors = ["Proxmox Support Team <support@proxmox.com>"]
license = "AGPL-3.0"
repository = "https://git.proxmox.com/?p=pve-cluster.git"
rust-version = "1.85"

[workspace.dependencies]
# Internal workspace dependencies
pmxcfs-api-types = { path = "pmxcfs-api-types" }
pmxcfs-config = { path = "pmxcfs-config" }
pmxcfs-logger = { path = "pmxcfs-logger" }
pmxcfs-rrd = { path = "pmxcfs-rrd" }
pmxcfs-memdb = { path = "pmxcfs-memdb" }
pmxcfs-status = { path = "pmxcfs-status" }
pmxcfs-test-utils = { path = "pmxcfs-test-utils" }

# Core async runtime
tokio = { version = "1.35", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging and tracing
tracing = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Network and cluster
bytes = "1.5"
sha2 = "0.10"

# Concurrency primitives
parking_lot = "0.12"

# System integration
libc = "0.2"

# Development dependencies
tempfile = "3.8"

[workspace.lints.clippy]
uninlined_format_args = "warn"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[profile.dev]
opt-level = 1
debug = true

[patch.crates-io]
