[package]
name = "pmxcfs-api-types"
description = "Shared types and error definitions for pmxcfs"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# Error handling
thiserror.workspace = true

# System integration
libc.workspace = true
