[package]
name = "pmxcfs-dfsm"
description = "Distributed Finite State Machine for cluster state synchronization"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# Internal dependencies
pmxcfs-api-types.workspace = true
pmxcfs-memdb.workspace = true
pmxcfs-services.workspace = true

# Corosync integration
rust-corosync.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Async and concurrency
parking_lot.workspace = true
async-trait.workspace = true
tokio.workspace = true

# Serialization
serde.workspace = true
bincode.workspace = true
bytemuck.workspace = true

# Logging
tracing.workspace = true

# Utilities
num_enum.workspace = true
libc.workspace = true

[dev-dependencies]
tempfile.workspace = true
libc.workspace = true
