[package]
name = "pmxcfs-status"
description = "Status monitoring and RRD data management for pmxcfs"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# Workspace dependencies
pmxcfs-api-types.workspace = true
pmxcfs-config.workspace = true
pmxcfs-rrd.workspace = true
pmxcfs-memdb.workspace = true
pmxcfs-logger.workspace = true

# Error handling
anyhow.workspace = true

# Async runtime
tokio.workspace = true

# Concurrency primitives
parking_lot.workspace = true

# Logging
tracing.workspace = true

# System information (Linux /proc filesystem)
procfs = "0.17"

[dev-dependencies]
tempfile.workspace = true
pmxcfs-test-utils.workspace = true
