[package]
name = "pmxcfs-test-utils"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "pmxcfs_test_utils"
path = "src/lib.rs"

[dependencies]
# Internal workspace dependencies
pmxcfs-api-types.workspace = true
pmxcfs-config.workspace = true
pmxcfs-memdb.workspace = true
pmxcfs-status.workspace = true

# Error handling
anyhow.workspace = true

# Concurrency
parking_lot.workspace = true

# System integration
libc.workspace = true

# Development utilities
tempfile.workspace = true

# Async runtime
tokio.workspace = true
