[package]
name = "pmxcfs"
description = "Proxmox Cluster File System - Rust implementation"
homepage = "https://www.proxmox.com"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[lib]
name = "pmxcfs_rs"
path = "src/lib.rs"

[[bin]]
name = "pmxcfs"
path = "src/main.rs"

[dependencies]
# Workspace members
pmxcfs-config.workspace = true
pmxcfs-api-types.workspace = true
pmxcfs-memdb.workspace = true
pmxcfs-dfsm.workspace = true
pmxcfs-rrd.workspace = true
pmxcfs-status.workspace = true
pmxcfs-ipc.workspace = true
pmxcfs-services.workspace = true

# Core async runtime
tokio.workspace = true
tokio-util.workspace = true
async-trait.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging and tracing
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-journald.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true

# Command-line parsing
clap = { version = "4.4", features = ["derive"] }

# FUSE filesystem (using local fork with rename support)
proxmox-fuse = { git = "ssh://git@github.com/tchaikov/proxmox-fuse-rs.git", rev = "752978fe9ca81225ec00dbeff5e8e33e5a5bd56e" }

# Network and cluster
bytes.workspace = true
sha2.workspace = true
bytemuck.workspace = true
base64.workspace = true

# System integration
libc.workspace = true
nix.workspace = true
users.workspace = true

# Corosync/CPG bindings
rust-corosync.workspace = true

# Concurrency primitives
parking_lot.workspace = true

# Utilities
chrono.workspace = true
futures.workspace = true
num_enum.workspace = true

[dev-dependencies]
tempfile.workspace = true
pmxcfs-test-utils.workspace = true
filetime = "0.2"
